# NAVIGATOR-UI

./: README.md  app.js  babel.config.js  main.js  package-lock.json  package.json  pyproject.toml  server.js  start_server.sh  webpack.config.js
app/: index.css  index.js  main.js
app/Controller/: controller.html
app/Hotkey/: hotkey.css  hotkey.html  hotkey.js  hotkey.json
app/Monitor/: monitor.html
app/Repository/: repository.css  repository.html  repository.js
app/Splash/: splash.html  splash.js
app/Terminal/: terminal.css  terminal.html  terminal.js
app/templates/: pageView.js  sidebar.js  topbar.js
app/utils/: htmlUtils.js  strUtil.js  urlUtils.js
config/: repositories.json
public/: index.html
public/js/: terminal.js
src/: serverHandler.js
src/css/: main.css
src/js/: basicPageInfo.js  launch.js  preload.js  terminal.js  utils.js
static/: index.html  launch.html
tests/: utils.test.js
