[tool.poetry]
name = "nasco-monitor"
version = "0.1.0"
description = "GUI tool for monitoring NASCO system status."
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/KaoruNishikawa/nasco_monitor"
repository = "https://github.com/KaoruNishikawa/nasco_monitor"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b"
flake8 = "^3.8"
sphinx = "^3.3"
pydata-sphinx-theme = "^0.4"
m2r2 = "^0.2"
ipykernel = "^5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
